﻿
This file is here just so I'm reminded to keep track of changes as I do em.


//===v1.00 - too lazy to add right now

//===v1.05 - same deal


//===v1.10

-Semi-major refactorings (file inclusion was changed around, behaviors hopefully shouldn't change)
-Fixed GetCalculatedEquippedWeight and GetBaseEquippedWeight expecting an int "minWeight" instead of a float.
-GetCalculatedEquippedWeight - Fixed nullptr issue (caused crashes if no weapon was equipped)
-GetCalculatedEquippedWeight - Fixed "Modify Light Items" adjustement not being calculated per-reference (used to only care about if the player had the effect)
-For GetCalculatedEquippedWeight / GetBaseEquippedWeight / GetNumBrokenEquippedItems:
	*Fixed items being counted multiple times if they had multiple equip slots.
	*Added two new flags: skipUnplayable and noQuestItems
	*DEFAULT BEHAVIOR CHANGED: In order to avoid including unplayable items like the pipboy by default-calling the function, 
		`skipUnplayable` is automatically checked if Flags == 0 (or not provided).
		(This also applies to the new GetEquippedItems/UnequipItems functions)

-New Functions:
* SetShowOffDebugMode
* GetShowOffDebugMode
* UnequipItems
* GetEquippedItems
* IsBaseForm
* SetRandomizerSeed
* SetSeedUsingForm
* GetRandomizerSeed
* RandSeeded
* GetRandomPercentSeeded
* IsReferenceCloned
* AdvanceSeed

//===v1.15
===Bug Fixes:
* Fixed certain GetEquipped__ functions always printing to console
* Add RandSeeded safety check (Min must be <= Max) - before, breaking this assertion caused a crash. Returns -1 if this assertion fails.
* Fix GetRandomizerSeed returning NAN (returns -1 for errors now).

===New Functions:
* IsTemporaryReference
* GetPCHasScriptedFastTravelOverride
* GetPCCanFastTravel
* WeaponHasFlag
* ActorHasBaseFlag
* RemoveAllItemsShowOff

(Template:)
//===v???
===Bug Fixes:
* 

===New Functions:
*

******DON'T FORGET TO UPDATE THE PLUGIN VERSION BEFORE EVERY RELEASE*********